# python-clean-architecture

./: .env.example  .gitignore  Taskfile.yaml  compose.yaml  main.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yaml
app/: container.py
app/config/: app_config.py  database_config.py  db.py
app/datastore/: item.py
app/datastore/database/: __init__.py  base.py  connection_protocol.py  firestore.py  firestore_transaction_manager.py  mysql.py  mysql_transaction_manager.py  sqlite.py  sqlite_transaction_manager.py  transaction_factory.py  transaction_manager.py
app/interactor/: item.py
app/model/: item.py
app/repository/: item.py
app/router/: item.py
app/schema/: core.py  item.py
app/usecase/: item.py
db/: ddl.sql
tests/unit/datastore/: __init__.py  conftest.py  test_item.py
tests/unit/interactor/: test_item.py
tests/unit/router/: __init__.py  test_item.py
